--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -2,12 +2,12 @@
 
 {% block body %}
     <div class="container-fluid">
- {# <a href="/"><button class="btn text-white rounded my-4" style="background-color: #ffba08" type="submit">ACCUEIL</button></a> #}
+    {# <a href="/"><button class="btn text-white rounded my-4" style="background-color: #ffba08" type="submit">ACCUEIL</button></a> #}
   
      <div id="" class="d-flex img-fluid mx-auto" style="width:1400px; padding-top:2%;" >
       
         <div class="carousel-item active">
-            <img class="" max-width="100px" height="" src={{asset('/images/imagesUpload/404-sans-btn.png')}} role="page 404">
+            <img class="" max-width="100px" height="" src={{asset('/images/imagesUpload/404-sans-btn.png')}} role="page 404" alt="page 404">
             </img>
         </div>
     </div>
