--- a/templates/email/mail.html.twig
+++ b/templates/email/mail.html.twig
@@ -3,10 +3,12 @@
 {% block body %}
 <div class="container mt-4">
     <h1 class="text-center p-4" style="background-color: #eddcf9">Formulaire de contact</h1>
+
+   <!-- Formulaire de contact -->
+
     <form id="contact-form" method="post" action="{{ path('mail') }}" role="form">
 
         <div class="messages"></div>
-
         <div class="controls">
 
             <div class="row mt-5">
