--- a/templates/email/mailer.html.twig
+++ b/templates/email/mailer.html.twig
@@ -3,19 +3,16 @@
       xmlns:v="urn:schemas-microsoft-com:vml"
       xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-    <!--[if gte mso 9]><xml>
-        <o:OfficeDocumentSettings>
-            <o:AllowPNG/>
-            <o:PixelsPerInch>96</o:PixelsPerInch>
-        </o:OfficeDocumentSettings>
-    </xml><![endif]-->
-    <!-- fix outlook zooming on 120 DPI windows devices -->
+    
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- So that mobile will display zoomed in -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- enable media queries for windows phone 8 -->
     <meta name="format-detection" content="date=no"> <!-- disable auto date linking in iOS 7-9 -->
     <meta name="format-detection" content="telephone=no"> <!-- disable auto telephone linking in iOS 7-9 -->
-    <title>Single Column</title>
+    <title>Mail de contact</title>
+
+    <!-- Style du mail de contact -->
+
     <style type="text/css">
         body {
             margin: 0;
@@ -82,13 +79,19 @@
         }
     </style>
 </head>
+
+   <!-- CREATION DU MAIL DE CONTACT -->
+
 <body class="" style="margin:0; padding:0;" bgcolor="#F0F0F0" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+
 <!-- 100% background wrapper (grey background) -->
+
 <table border="0" width="5vw" height="5vh" cellpadding="0" cellspacing="0" bgcolor="#F0F0F0">
     <tr>
         <td align="left" valign="top" bgcolor="#F0F0F0" style="background-color: #F0F0F0;">
             <br>
             <img class="mb-5" src="{{ cid }}" alt="logo">
+
             <!-- 600px container (white background) -->
             <table border="0" width="600" cellpadding="0" cellspacing="0" class="container" style="width:600px;max-width:600px">
                 <tr>
