--- a/templates/modelBackoffice.html.twig
+++ b/templates/modelBackoffice.html.twig
@@ -1,17 +1,21 @@
 <!doctype html>
-<html lang="fr">
+<html lang="fr_FR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% block stylesheets %}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+     <link rel="icon" href="/images/favicon/favicon.ico" />
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     {% endblock %}
    
 </head>
 <body>
+
+   <!-- Menu de navigation -->
+
 <div class="row">
 <div style=" height: 100vh" class="col-md-2 vertical-nav pl-3" id="sidebar">
       <nav class="ml-3" style="background-color: #4b1348">
